--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -88,6 +88,7 @@ body {
     }
 }
 
+//store modal styles
 .store-modal-container {
     width: 100%;
     height: 100%;
@@ -99,8 +100,23 @@ body {
     width: 75%;
     height: 75%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.2fr 1fr;
     justify-items: center;
     align-items: center;
+}
+.buyer-seller-wrapper {
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
+}
+.store-buyer {
+    border-right: 1px solid black;
+    padding: 2em;
+}
+.store-seller {
+    border-left: 1px solid black;
+    padding: 2em;
 }
