added buy and sell functionality in store accomadating lots of different actions and added multiple inventory search helper function being used throughout need to optimize past code with it later

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -47,8 +47,8 @@ body {
 }
 .player-inventory {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     overflow-y: scroll;
     max-height: 45vh;
 }
