--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -97,7 +97,7 @@ body {
     align-items: center;
 }
 .store-modal {
-    width: 75%;
+    width: 40%;
     height: 75%;
     display: grid;
     grid-template-columns: 1fr;
@@ -119,4 +119,67 @@ body {
 .store-seller {
     border-left: 1px solid black;
     padding: 2em;
+}
+
+//Travel Modal Styles
+.travel-modal-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.travel-heading {
+    margin: 0.5em 2em;
+}
+.travel-modal {
+    width: 35%;
+    height: 75%;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: start;
+}
+.level-buttons {
+    margin-top: 3em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2em;
+}
+.btn-level {
+    width: 100%;
+    @media (max-width: 900px) {
+        width: 75%;
+    }
+    background-color: #0d6efd;
+    border-radius: 12px;
+    font-size: 22px;
+    line-height: 150%;
+    font-weight: 700;
+    border: 3px solid black;
+    transition: background-color 750ms;
+    letter-spacing: 4px;
+    &:hover {
+        background-color: rgb(0, 169, 169);
+        transition: background-color 750ms;
+    }
+}
+.btn-level-disabled {
+    width: 100%;
+    @media (max-width: 900px) {
+        width: 75%;
+    }
+    background-color: #0d6efd;
+    border-radius: 12px;
+    font-size: 22px;
+    line-height: 150%;
+    font-weight: 700;
+    border: 3px solid black;
+    transition: background-color 250ms;
+    letter-spacing: 4px;
+    &:hover {
+        background-color: grey;
+        transition: background-color 250ms;
+    }
 }
