did a big review and cleanup, made main app file much smaller by making more individual UI components and moving some functions to other files

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -78,13 +78,16 @@ body {
 }
 .button-groupings {
     display: flex;
-    margin-bottom: 1em;
+    margin-bottom: 1.5em;
     margin-top: 0.5em;
     margin-left: 5%;
     margin-right: 5%;
     flex-wrap: wrap;
     button {
-        margin-bottom: 0.5em;
+        border: 2px black solid;
+        &:hover {
+            border: 2px black solid;
+        }
     }
 }
 
@@ -97,7 +100,7 @@ body {
     align-items: center;
 }
 .store-modal {
-    width: 40%;
+    width: 60%;
     height: 75%;
     display: grid;
     grid-template-columns: 1fr;
