added level 3 and almost all of level 4 and 3 more uniques

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -83,6 +83,7 @@ body {
     margin-left: 5%;
     margin-right: 5%;
     flex-wrap: wrap;
+    gap: 0.25em;
     button {
         border: 2px black solid;
         &:hover {
